@@ -1,2 +1,2 @@
 # Master-Thesis
-master
+--enable-native-access=javafx.graphics --module-path "javafx-sdk-26.0.1\lib" --add-modules javafx.controls,javafx.fxml
